<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">androiddhiwise</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="msg_secondary_actio">Secondary Action</string>
    <string name="lbl_back">Back</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_expenses">Expenses</string>
    <string name="lbl_march">March</string>
    <string name="lbl_next">Next</string>
    <string name="msg_compose_your_me">Compose your message here...</string>
    <string name="lbl_we">We</string>
    <string name="lbl_fr">Fr</string>
    <string name="msg_lorem_ipsum_dol2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </string>
    <string name="lbl_insights">Insights</string>
    <string name="lbl_message_here">Message here...</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_i_love_it">I love it!</string>
    <string name="lbl_mo">Mo</string>
    <string name="lbl_32_01">$32.01</string>
    <string name="msg_victoria_robert">Victoria Robertson</string>
    <string name="msg_he_ll_want_to_u">"He'll want to use your yacht, and I don't want this thing smelling like fish."</string>
    <string name="msg_a_mantra_goes_h">A mantra goes here</string>
    <string name="lbl_30min">30min.</string>
    <string name="lbl_show">Show</string>
    <string name="lbl_user_options">User Options</string>
    <string name="msg_consequat_velit">Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation. Ullamco tempor adipisicing et voluptate duis sit esse aliqua esse ex dolore esse. Consequat velit qui adipisicing sunt.</string>
    <string name="lbl_deals">Deals</string>
    <string name="lbl_tu">Tu</string>
    <string name="lbl_content">Content</string>
    <string name="lbl_feed">Feed</string>
    <string name="msg_i_would_like_to">I would like to receive your newsletter and other promotional information.</string>
    <string name="msg_forgot_your_pas">Forgot your password?</string>
    <string name="lbl_hot_deals">Hot deals</string>
    <string name="lbl_30">30</string>
    <string name="lbl_31">31</string>
    <string name="lbl_su">Su</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_rate_our_app">Rate our app</string>
    <string name="lbl_th">Th</string>
    <string name="msg_item_1_name_go">Item #1 Name
Goes Here</string>
    <string name="lbl_photos">Photos</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_20">20</string>
    <string name="lbl_23">23</string>
    <string name="lbl_24">24</string>
    <string name="lbl_trending">Trending</string>
    <string name="lbl_21">21</string>
    <string name="lbl_22">22</string>
    <string name="lbl_27">27</string>
    <string name="lbl_28">28</string>
    <string name="lbl_drawer_header">Drawer Header</string>
    <string name="lbl_25">25</string>
    <string name="msg_post_title_here">Post Title Here...</string>
    <string name="lbl_26">26</string>
    <string name="lbl_29">29</string>
    <string name="lbl_sa">Sa</string>
    <string name="lbl_search_result">Search result</string>
    <string name="msg_labore_sunt_ven">Labore sunt veniam amet est. Minim nisi dolor eu ad incididunt cillum elit ex ut. Dolore exercitation nulla tempor consequat aliquip occaecat. Nisi id ipsum irure aute. Deserunt sit aute irure quis nulla eu consequat fugiat Lorem sunt magna et consequat labore. Laboris incididunt id Lorem est duis deserunt nisi dolore eiusmod culpa exercitation consectetur.

Fugiat do aliqua laboris cillum sint dolor officia adipisicing excepteur fugiat officia. Cupidatat ut elit consequat ea laborum occaecat laborum aute consectetur Lorem exercitation. Lorem anim minim officia aliquip commodo deserunt mollit. Duis deserunt quis cillum voluptate duis ipsum quis incididunt elit excepteur excepteur labore duis cillum. Voluptate sint nulla minim eiusmod in nulla. Ea id ad duis esse adipisicing culpa ex esse ea dolore consequat. Reprehenderit eu minim veniam aliquip do ipsum duis do qui adipisicing aliquip ad occaecat.

Enim reprehenderit sunt do do. Ex fugiat nisi sit anim culpa nisi. Non labore fugiat culpa magna. Commodo esse Lorem ex duis do et do. Est laboris cupidatat ad est anim adipisicing sit labore do dolor officia. Fugiat consequat in excepteur reprehenderit id aliquip voluptate sint enim proident aliquip occaecat quis non. Ad nulla aliqua est amet aliqua sint est occaecat amet sunt.

Ullamco laborum qui sint officia officia ad Lorem culpa minim voluptate occaecat id duis esse. Ullamco sunt magna consectetur excepteur. Id cupidatat proident ex ad elit laboris. Nulla aute sit occaecat laboris. Laboris minim aliquip exercitation elit commodo ipsum et fugiat sit anim laborum proident cillum laboris.

Et cillum tempor esse sit anim et veniam. Tempor magna irure ex ea id fugiat. Ex eu sint tempor quis exercitation amet ut deserunt sit fugiat aliquip nostrud nulla. Eu sunt laborum elit consectetur tempor sunt dolore in sunt reprehenderit voluptate dolore adipisicing. Proident eiusmod reprehenderit quis sint exercitation voluptate non labore. Sunt non sint in Lorem occaecat dolore tempor ipsum et proident sit Lorem ipsum officia.</string>
    <string name="lbl_posts">Posts</string>
    <string name="lbl_compose">Compose</string>
    <string name="lbl_12">12</string>
    <string name="lbl_13">13</string>
    <string name="lbl_10">10</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_11">11</string>
    <string name="lbl_16">16</string>
    <string name="lbl_send">Send</string>
    <string name="lbl_17">17</string>
    <string name="lbl_14">14</string>
    <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec fringilla quam eu faci lisis mollis. </string>
    <string name="lbl_name">Name</string>
    <string name="lbl_15">15</string>
    <string name="lbl_18">18</string>
    <string name="lbl_19">19</string>
    <string name="lbl_profile">Profile</string>
    <string name="msg_don_t_like_the">Don\u2019t like the app? Let us know.</string>
    <string name="msg_congratulations">Congratulations!</string>
    <string name="msg_consequat_velit2">Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation. Ullamco tempor adipisicing et voluptate duis sit esse aliqua esse ex dolore esse. </string>
    <string name="msg_consequat_velit3">Consequat velit qui adipisicing sunt.</string>
    <string name="msg_consequat_velit4">Consequat velit qui adipisicing sunt do reprehenderit ad laborum tempor ullamco exercitation.</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_log_in2">Log In</string>
    <string name="msg_radio_option_he">Radio option here...</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_1">1</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_4">4</string>
    <string name="lbl_market">Market</string>
    <string name="lbl_5">5</string>
    <string name="lbl_6">6</string>
    <string name="lbl_7">7</string>
    <string name="lbl_8">8</string>
    <string name="lbl_9">9</string>
    <string name="lbl_60min">60min.</string>
    <string name="lbl_19_99">$19.99</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_images">Images</string>
    <string name="lbl_messages">Messages</string>
    <string name="lbl_70_spent">70% spent</string>
    <string name="lbl_header">Header</string>
    <string name="lbl_new">New</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_8m_ago">8m ago</string>
    <string name="lbl_statistic">Statistic</string>
    <string name="lbl_click_me">Click Me</string>
    <string name="lbl_author">Author</string>
    <string name="lbl_15min">15min.</string>
</resources>
