<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearCalendarRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end"
            android:id="@+id/txtTwentyNine"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_29"
            style="@style/txtInterregular14_1" tools:text="@string/lbl_29"/>
        <TextView android:ellipsize="end" android:id="@+id/txtThirty"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.22" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_30"
            style="@style/txtInterregular14_1" tools:text="@string/lbl_30"/>
        <TextView android:ellipsize="end" android:id="@+id/txtThirtyOne"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.18" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_31"
            style="@style/txtInterregular14_1" tools:text="@string/lbl_31"/>
        <TextView android:ellipsize="end" android:id="@+id/txtOne"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_43pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.07" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_1"
            style="@style/txtInterregular14_2" tools:text="@string/lbl_1"/>
        <TextView android:ellipsize="end" android:id="@+id/txtTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_43pxh"
            android:layout_weight="0.11" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_2"
            style="@style/txtInterregular14_2" tools:text="@string/lbl_2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtThree"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.11" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_3"
            style="@style/txtInterregular14_2" tools:text="@string/lbl_3"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFour"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_42pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.11" android:layout_width="0dp"
            android:singleLine="true" android:text="@string/lbl_4"
            style="@style/txtInterregular14_2" tools:text="@string/lbl_4"/>
    </LinearLayout>
</layout>
