<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearRowcontentblock"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <View
            android:background="@drawable/rectangle_bg_gray_100_radius_8"
            android:id="@+id/viewContentBlock"
            android:layout_height="@dimen/_50pxh"
            android:layout_marginBottom="@dimen/_14pxv"
            android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_50pxh"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnheader"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_weight="0.85" android:layout_width="0dp" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowheader"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtHeader"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.53"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_header"
                    style="@style/txtIntersemibold16_1" tools:text="@string/lbl_header"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDistance"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_170pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.47"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_8m_ago"
                    style="@style/txtInterregular14_1" tools:text="@string/lbl_8m_ago"/>
            </LinearLayout>
            <TextView android:id="@+id/txtHellwanttou"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_he_ll_want_to_u"
                style="@style/txtInterregular14_2" tools:text="@string/msg_he_ll_want_to_u"/>
        </LinearLayout>
    </LinearLayout>
</layout>
