<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="end" android:id="@+id/linearSignUp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIOSStatusBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageNineHundredFortyOne"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_941"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_941"/>
                <FrameLayout android:id="@+id/frameStacknotch"
                    android:layout_height="@dimen/_28pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_16pxh" android:layout_width="@dimen/_282pxh">
                    <ImageView android:id="@+id/imageNotch"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_28pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_219pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_notch"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_notch"/>
                    <ImageView android:id="@+id/imageSettings"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_66pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_settings"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearPageHeader"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageClose"
                android:layout_height="@dimen/_12pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_7pxv"
                android:layout_width="@dimen/_11pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_close"
                tools:ignore="ContentDescription" tools:src="@drawable/img_close"/>
            <LinearLayout android:id="@+id/linearRowsignup"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_99pxh"
                android:layout_weight="0.95" android:layout_width="0dp" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignUp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.73"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_sign_up"
                    style="@style/txtIntersemibold30" tools:text="@string/lbl_sign_up"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginStart="@dimen/_71pxh"
                    android:layout_marginTop="@dimen/_6pxv"
                    android:layout_weight="0.27"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@string/lbl_login"
                    style="@style/txtIntermedium16" tools:text="@string/lbl_login"/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_gray_201_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_name"
            android:id="@+id/etInputText" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_100_border_gray_201_radius_8"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etInputTextOne"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_14pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:textColorHint="@color/gray_400"
            style="@style/etSolidRoundedOutline" tools:ignore="Autofill"/>
        <LinearLayout android:id="@+id/linearRowpassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStylegray_100cornerRadius">
            <TextView android:ellipsize="end"
                android:id="@+id/txtPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginStart="@dimen/_16pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.64" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_password"
                style="@style/txtIntermedium16_1" tools:text="@string/lbl_password"/>
            <TextView android:ellipsize="end" android:id="@+id/txtShow"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_14pxv"
                android:layout_marginEnd="@dimen/_16pxh"
                android:layout_marginStart="@dimen/_193pxh"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_weight="0.36" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_show"
                style="@style/txtIntermedium16" tools:text="@string/lbl_show"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearCheckboxOption"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <View
                android:background="@drawable/rectangle_bg_gray_100_border_gray_201_radius_4"
                android:id="@+id/viewBG"
                android:layout_height="@dimen/_16pxh"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_16pxh"/>
            <TextView android:id="@+id/txtIwouldliketo"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_weight="0.95" android:layout_width="0dp"
                android:text="@string/msg_i_would_like_to"
                style="@style/txtInterregular14" tools:text="@string/msg_i_would_like_to"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUpOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_sign_up"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgotyourpas"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/msg_forgot_your_pas"
            style="@style/txtIntersemibold16" tools:text="@string/msg_forgot_your_pas"/>
    </LinearLayout>
</layout>
