<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="end"
        android:id="@+id/linearComposeOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearIOSStatusBar"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageNineHundredFortyOne"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_941"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_941"/>
                <FrameLayout android:id="@+id/frameStacknotch"
                    android:layout_height="@dimen/_28pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_16pxh" android:layout_width="@dimen/_282pxh">
                    <ImageView android:id="@+id/imageNotch"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_28pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_219pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_notch"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_notch"/>
                    <ImageView android:id="@+id/imageSettings"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_66pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_settings"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_settings"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPageHeader"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_116pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtBack"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_weight="0.21" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_back"
                style="@style/txtIntermedium16" tools:text="@string/lbl_back"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtCompose"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_66pxh"
                android:layout_weight="0.79" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/lbl_compose"
                style="@style/txtIntersemibold30" tools:text="@string/lbl_compose"/>
        </LinearLayout>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtComposeyourme"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_122pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_44pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_compose_your_me"
            style="@style/txtIntermedium16_1" tools:text="@string/msg_compose_your_me"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSend"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_14pxh"
            android:layout_marginStart="@dimen/_14pxh"
            android:layout_marginTop="@dimen/_290pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_send" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_send"/>
    </LinearLayout>
</layout>
